@@ -32,7 +32,7 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.25.2'
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.9.0.25.07'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.26.0.0.0'
     implementation 'org.springframework:spring-jdbc:6.2.12'
 
     /*
