@@ -756,15 +756,24 @@ public class FileParser {
         Relation rel = relations.get(relName);
         if( rel==null ) {
             // MONDO extra processing
-            if( ontId.equals("MONDO") && relName.equals("seeAlso") ) {
+            if( ontId.equals("MONDO:") && relName.equals("seeAlso") ) {
                 rec.addSynonym(line.substring(spacePos).trim(), "seeAlso");
                 return;
             }
-            if( ontId.equals("MONDO") && relName.equals("excluded_subClassOf") ) {
+            else if( ontId.equals("MONDO:") && relName.equals("excluded_subClassOf") ) {
                 // ignore these relationships entirely
                 return;
             }
-            if( ontId.equals("MONDO") && (relName.equals("disease_has_feature") || relName.equals("disease_shares_features_of")) ) {
+            else if( ontId.equals("MONDO:") && (relName.equals("disease_has_feature") || relName.equals("disease_shares_features_of")) ) {
+                String name = line.substring(spacePos).trim();
+                int spacePos2 = name.indexOf(' ');
+                if( spacePos2>0 ) {
+                    name = name.substring(0, spacePos2);
+                }
+                rec.addSynonym(name, relName);
+                return;
+            }
+            else if( ontId.equals("EFO:") && relName.contains("taxon") ) {
                 String name = line.substring(spacePos).trim();
                 int spacePos2 = name.indexOf(' ');
                 if( spacePos2>0 ) {
